# hiPhoto_web

./: .gitignore  dump.rdb  hiphoto.db  read.md
hiphoto-backend/: .gitignore  API.md  Cargo.toml  README.md  dump.rdb  hiphoto.db  test_auth.sh
hiphoto-backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  main_complex.rs  main_simple.rs
hiphoto-backend/src/handlers/: auth.rs  mod.rs  photo.rs  room.rs  score.rs  tag.rs  user.rs
hiphoto-backend/src/models/: mod.rs  photo.rs  room.rs  score.rs  tag.rs  user.rs
hiphoto-backend/src/services/: auth.rs  cleanup.rs  email.rs  email.rs.backup  image.rs  mod.rs  redis.rs
hiphoto-backend/src/utils/: jwt.rs
hiphoto-frontend/: index.html  package.json
hiphoto-frontend/src/: App.tsx  index.css  test.html
hiphoto-frontend/src/api/: auth.ts  index.ts  photo.ts  room.ts  score.ts
hiphoto-frontend/src/components/: CreateRoomModal.tsx  InviteCodeSearch.tsx  Layout.tsx  Navbar.tsx  PhotoUploader.tsx  PhotoViewer.tsx  ProtectedRoute.tsx  RoomCard.tsx  ScoreBoard.tsx  ScoringCriteriaSettings.tsx  UserAvatar.tsx
hiphoto-frontend/src/hooks/: useAuth.ts  usePhoto.ts
hiphoto-frontend/src/pages/: Home.tsx  Login.tsx  PhotoDetail.tsx  Profile.tsx  Register.tsx  RoomDetail.tsx  RoomDetailNew.tsx  RoomList.tsx  VerifyEmail.tsx
hiphoto-frontend/src/stores/: authStore.ts
hiphoto-frontend/src/types/: index.ts
